# flask_contacts_manager_HW11

./: pyproject.toml  readme.md  task.md
config/: config.py
database/: app.db.hw11
migrations/versions/: 71dd46d1b85a_initial_migration.py  7c9836dd2c16_initial_migration1.py  87434c971c5a_add_token_cookie.py  f46c964087f6_initial_migration2.py
src/: __init__.py  models.py  routes.py
src/libs/: validation_schema.py
src/repository/: owners.py  persons.py
src/templates/: base.html
src/templates/pages/: add_contact.html  contact.html  contacts.html  edit.html  index.html  registration.html
tests/: conftest.py  test_models.py
tests/test_auth_routes/: test_routes.py  test_routes_login.py  test_routes_registration.py
tests/test_contacts_routes/: test_contacts.py
tests/validation_schema/: test_contactschema_validation.py  test_login_validation.py  test_registration_validation.py
