[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Alexey Vedmedev <al.vedmedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
bcrypt = "^4.0.1"
Flask-Migrate = "^4.0.0"
python-dotenv = "^0.21.0"
marshmallow = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
